grammars/tree-sitter-pdx-eu4-csv/test/corpus/csv.txt
==================
Delimited records and quoted cells
==================
id;name;note
1;"A;B";"say ""hi"""
2	Tab	value
---

(source_file
  (record
    (cell
      (unquoted_cell))
    (delimiter)
    (cell
      (unquoted_cell))
    (delimiter)
    (cell
      (unquoted_cell)))
  (newline)
  (record
    (cell
      (unquoted_cell))
    (delimiter)
    (cell
      (quoted_cell))
    (delimiter)
    (cell
      (quoted_cell
        (escaped_quote)
        (escaped_quote))))
  (newline)
  (record
    (cell
      (unquoted_cell))
    (delimiter)
    (cell
      (unquoted_cell))
    (delimiter)
    (cell
      (unquoted_cell))))
